[package]
name = "taskman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
eframe = "0.20.1"

[dependencies.uuid]
version = "1.3.0"
features = ["v4", "fast-rng", "macro-diagnostics"]
