[package]
name = "taskman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
eframe = { version = "0.20.1", features = ["persistence"] }
notify-rust = "4.7.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics"] }

